# inspire_hand_ws

./: README.md
finger_mapper/: CMakeLists.txt  package.xml
finger_mapper/config/: finger_config.json  finger_poly_params.json  retargeting_poly_map.json
finger_mapper/scripts/: create_config.py
finger_mapper/src/: finger_mapper.cpp
handpoints_mediapipe/: workflow.txt
handpoints_mediapipe/test/: c_2channel_test.py
handpoints_publisher/: CMakeLists.txt  package.xml
handpoints_publisher/msg/: HandKeypoints.msg
handpoints_publisher/src/: handpoints_pub.cpp
inspire_description/: CMakeLists.txt  package.xml
inspire_description/config/: display.rviz
inspire_description/launch/: display.launch.py  hand_control.launch.py
inspire_description/meshes/: index1.STL  little1.STL  little2.STL  middle1.STL  middle2.STL  palm.STL  ring1.STL  thumb1.STL  thumb4.STL
inspire_description/meshes/visual_dae/: left_base_link.dae  left_index_proximal.dae  left_thumb_proximal_base.dae  right_base_link.dae  right_index_intermediate.dae  right_index_proximal.dae  right_thumb_distal.dae  right_thumb_intermediate.dae  right_thumb_proximal_base.dae
inspire_description/urdf/: hand.csv  hand.urdf  inspire_hand_left.urdf
inspire_hand_modbus/: example.txt  package.xml  setup.cfg  setup.py
inspire_hand_modbus/inspire_hand_modbus/: inspire_hand_modbus_topic.py
inspire_interfaces/: CMakeLists.txt  package.xml
inspire_interfaces/msg/: GetAngleAct1.msg  GetForceAct1.msg  GetTouchAct1.msg  SetAngle1.msg  SetForce1.msg  SetSpeed1.msg
inspire_retargeting/: package.xml  setup.cfg  setup.py  workflow.txt
inspire_retargeting/data/: hand_3d_points.csv
inspire_retargeting/inspire_retargeting/: detect_from_csv.py  pub_csv.py  single_hand_detector.py
