<?xml version="1.0"?>
<package format="3">
  <name>inspire_hand_modbus</name>
  <version>0.0.1</version>
  <description>Python Modbus interface for Inspire hand</description>
  <maintainer email="zz@todo.todo">zz</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>inspire_interfaces</depend>

  <!-- 用于打包和测试 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
