<package format="3">
<name>inspire_interfaces</name>
<version>0.0.0</version>
<description>Gripper control package for ROS 2.</description>
<maintainer email="inspire001@todo.todo">inspire001</maintainer>
<license>MIT</license>
<buildtool_depend>ament_cmake</buildtool_depend>
<!--  编译时依赖  -->
<build_depend>rosidl_default_generators</build_depend>
<!--  运行时依赖  -->
<exec_depend>rosidl_default_runtime</exec_depend>
<test_depend>ament_lint_auto</test_depend>
<test_depend>ament_lint_common</test_depend>
<member_of_group>rosidl_interface_packages</member_of_group>
<export>
<build_type>ament_cmake</build_type>
</export>
</package>
