<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspire_retargeting</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zz@todo.todo">zz</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  
  <build_depend>handpoints_publisher</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  
  <exec_depend>handpoints_publisher</exec_depend>
  <exec_depend>dex-retargeting</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>tqdm</exec_depend>
  <exec_depend>tyro</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
